fix: pop3 delete test fixes, for good?